[tool.poetry]
name = "kyopro-library"
version = "0.1.0"
description = ""
authors = ["hcn617 <xxxxxxxx@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
ac-library-python = {git = "https://github.com/not522/ac-library-python"}
numpy = "^2.2.0"
scipy = "^1.14.1"
networkx = "^3.4.2"
sympy = "^1.13.3"
sortedcontainers = "^2.4.0"
more-itertools = "^10.5.0"
shapely = "^2.0.6"
bitarray = "^3.0.0"
pulp = "^2.9.0"
mpmath = "^1.3.0"
pandas = "^2.2.3"
z3-solver = "^4.13.3.0"
scikit-learn = "^1.6.0"
cppyy = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
